tests/ui/statics/static-ref-cycle-uninhabited-init-issue-143047.stderr
error[E0080]: encountered static that tried to access itself during initialization
  --> $DIR/static-ref-cycle-uninhabited-init-issue-143047.rs:5:26
   |
LL | static X: &Never = weird(&X);
   |                          ^^ evaluation of `X` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
